--- a/crime_flask_app/templates/change_password.html
+++ b/crime_flask_app/templates/change_password.html
@@ -10,7 +10,7 @@
         <!--Enter New Password -->
         <div class="form-group">
             <label>Enter New Password...</label>
-            <input name="new_password" id="new_pass1" type="password" class="form-control" value=""
+            <input name="new_password" id="new-pass1" type="password" class="form-control" value=""
              aria-describedby="emailHelp">
         </div>
         <br/>
@@ -18,7 +18,7 @@
         <!--Confirm New Password -->
         <div class="form-group">
             <label>Confirm New Password...</label>
-            <input name="confirm_password" id="new_pass2" type="password" class="form-control" value=""
+            <input name="confirm_password" id="new-pass2" type="password" class="form-control" value=""
              aria-describedby="emailHelp">
         </div>
         <br/>
