--- a/crime_flask_app/templates/layout.html
+++ b/crime_flask_app/templates/layout.html
@@ -55,7 +55,7 @@
             <a class="nav-item nav-link" href="/posts/{{user.username}}" style = "color:#ffffff" id="my_post-btn">My Posts</a></li>
                 <li class="nav-item active">
             <a href="/logout" id="nav-logout">
-                <button type="button" class="btn btn-sm btn-secondary">Logout</button></a></li>
+                <button type="button" class="btn btn-sm btn-secondary" id="nav-logout-btn">Logout</button></a></li>
             </li>
         {% else%}
             <li class="nav-item">
