--- a/crime_flask_app/templates/my_account.html
+++ b/crime_flask_app/templates/my_account.html
@@ -9,9 +9,9 @@
     </div>
     <div class="card-body">
         <p class="card-text" id="user_info_card">
-            <strong>User ID: </strong>{{user.id}}<br/>
-            <strong>Email: </strong>{{user.email}}<br/>
-            <strong>Username: </strong>{{user.username}}<br/>
+            <strong>User ID: </strong><a id = "account_user_id">{{user.id}}</a><br/>
+            <strong>Email: </strong><a id = "account_user_email">{{user.email}}</a><br/>
+            <strong>Username: </strong><a id = "account_user_name">{{user.username}}</a><br/>
             <strong>Date Joined: </strong>{{user.date_created}}<br/>
         </p>
 
